[package]
name = "cargo-ligen"
version = "0.1.7-alpha.0"
authors = ["Danilo Guanabara <danguafer@gmail.com>", "Gabriel Arruda <arrudagates@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/sensorial-systems/cargo-ligen/"
description = "Cargo command for Ligen (https://github.com/sensorial-systems/ligen)"

[dependencies]
ligen = "0.1.14"
cargo_toml = "0.9.1"
